# rs-ticket-service

./: .env.example  Cargo.toml  README.md
abi/: build.rs
abi/protos/: ticket.proto
abi/src/: lib.rs
abi/src/pb/: ticket.rs
migrations/: 20240530052750_create_tickets_table.down.sql  20240530052750_create_tickets_table.up.sql  20240530134439_add_indexes_to_users_table.down.sql  20240530134439_add_indexes_to_users_table.up.sql
service/: Cargo.toml
service/src/: db.rs  main.rs  model.rs  server.rs
