[package]
name = "service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abi = { version = "0.1.0", path = "../abi" }
tokio = { version = "1.37.0", features = ["full"] }
tonic = "0.11.0"
sqlx = { version = "0.7.4", features = [
    "runtime-tokio-native-tls",
    "mysql",
    "chrono",
    "uuid",
] }
uuid = { version = "1.8.0", features = ["v4"] }
